# newsletter

./: .gitignore  .test_env  Procfile  pyproject.toml  venues.json
.github/workflows/: email_pipeline.yml  events_pipeline.yml  newsletter_pipeline.yml  telegram.yml
frontend/: .test_env.local  eslint.config.mjs  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/[slug]/: page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/art/: page.tsx
frontend/src/app/confirm/: page.tsx
frontend/src/app/contact/: page.tsx
frontend/src/app/lgbt/: page.tsx
frontend/src/app/newsletters/: page.tsx
frontend/src/app/pride/: page.tsx
frontend/src/components/: ContactForm.tsx  EventPreviewCard.tsx  FloatingCardsAnimator.tsx  FogOverlay.tsx  Footer.tsx  Header.tsx  SignupForm.tsx  ThemeController.tsx
frontend/src/config/: newsletterConfigs.ts
frontend/src/lib/: buildNewsletterQuery.ts  emailTemplates.ts  getNewsletterEvents.ts  supabase-browser.ts  validation.ts
newsletter/: constants.py  database.py  generate_token.py  gmail_client.py  gmail_labels.py  main.py  types.py  utils.py
newsletter/ai/: constants.py  get_ai_response.py  prompts.py
newsletter/data/: aggregators.json  venues_single.json
newsletter/process/: aggregator.py  archived__telegram.py  emails.py  events.py  events_enriched.py  newsletter.py  telegram.py  venues.py
newsletter/process/__tests__/: test_emails.py  test_types.py
newsletter/utils/: browser.py  caching.py  utils.py
(+7 files in other folders)
